add vision text

--- a/report.ipynb
+++ b/report.ipynb
@@ -17,10 +17,10 @@
     "## Table of contents\n",
     "1. [Introduction](#1-introduction)\n",
     "2. [Implementation](#2-implementation)\n",
-    "      - 2.1 [Global Navigation](#3-global-navigation)\n",
+    "      - 2.1 [Vision](#3-global-navigation)\n",
     "         -  [Implementation Details](#31-implementation-details)\n",
     "         -  [Functions](#32-functions)\n",
-    "      - 2.2 [Vision](#4-vision)\n",
+    "      - 2.2 [Global Navigation](#4-vision)\n",
     "         -  [Implementation Details](#41-implementation-details)\n",
     "         -  [Functions](#42-functions)\n",
     "      - 2.3 [Motion Control](#5-motion-control)\n",
@@ -90,14 +90,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Global Navigation\n"
+    "### 2.2 Vision\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "details: \n"
+    "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing the robot to identify markers, determining their orientation, and recognizing obstacles.\n",
+    "\n",
+    "##### Marker Detection\n",
+    "We used OpenCV's arUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
+    "\n",
+    "##### Grayscale Conversion and Thresholding\n",
+    "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
+    "\n",
+    "##### 2D Grid Representation\n",
+    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, occupied by the Thymio, the goal, or an obstacle. Additionally, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles.\n",
+    "\n",
+    "##### Dynamic Updates\n",
+    "The grid is continuously updated with the positions of the Thymio and the goal within the map. These updates ensure that the Thymio can make informed decisions, such as path recomputation after kidnapping events or motion control adjustments.\n",
+    "\n",
+    "This part lays the groundwork for successful navigation of the Thymio robot in the terrain."
    ]
   },
   {
@@ -118,7 +132,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Vision\n"
+    "### 2.2 Global Navigation\n",
+    "\n"
    ]
   },
   {
