add images for computer vision to report

--- a/report.ipynb
+++ b/report.ipynb
@@ -97,16 +97,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing the robot to identify markers, determining their orientation, and recognizing obstacles.\n",
+    "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing the robot to identify markers, determining their orientation, and recognizing obstacles. In the following, our procedure will be shown with the example of the following image feed:\n",
+    "\n",
+    "![Image Alt Text](./report_images/image_processing_images/simple_camera_feed.png)\n",
+    "\n",
     "\n",
     "##### Marker Detection\n",
     "We used OpenCV's arUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
     "\n",
+    "![Image Alt Text](./report_images/image_processing_images/processed_base_frame.png)\n",
+    "\n",
     "##### Grayscale Conversion and Thresholding\n",
     "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
     "\n",
+    "![Image Alt Text](./report_images/image_processing_images/binary_img.png)\n",
+    "\n",
+    "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This is resolved in the next step. \n",
+    "\n",
     "##### 2D Grid Representation\n",
-    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, occupied by the Thymio, the goal, or an obstacle. Additionally, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles.\n",
+    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, occupied by the Thymio, the goal, or an obstacle. \n",
+    "\n",
+    "After conversion, the 2D grid looks as follows:\n",
+    "\n",
+    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png)\n",
+    "\n",
+    "Here, still, the map contains the noise from the black sensors of the Thymio. This is solved by removing all obstacles that are detected to be small islands. Additionally, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
+    "\n",
+    "![Image Alt Text](./report_images/image_processing_images/grid_map.png)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "##### Dynamic Updates\n",
     "The grid is continuously updated with the positions of the Thymio and the goal within the map. These updates ensure that the Thymio can make informed decisions, such as path recomputation after kidnapping events or motion control adjustments.\n",
