added images to the computer vision part

--- a/report.ipynb
+++ b/report.ipynb
@@ -121,10 +121,14 @@
     "\n",
     "![Image Alt Text](./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png)\n",
     "\n",
-    "Here, still, the map contains the noise from the black sensors of the Thymio. This is solved by removing all obstacles that are detected to be small islands. Additionally, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
+    "Here, still, the map contains the noise from the black sensors of the Thymio. This is solved by removing all obstacles that are detected to be small islands which results in the following:\n",
+    "![Image Alt Text](./report_images/image_processing_images/grid_map_islands_removed_not_increased.png)\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map.png)\n",
     "\n",
+    "\n",
+    "Lastly, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
+    "\n",
+    "![Image Alt Text](./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png)\n",
     "\n",
     "\n",
     "\n",
@@ -166,7 +170,9 @@
     "The shortest path is calculated using the Dijkstra algorithm. The resulting path ensures that the Thymio can navigate through the environment while avoiding obstacles and ensures that it efficiently reaches the goal.\n",
     "\n",
     "##### Path Discretization\n",
-    "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes.\n",
+    "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes. The resulting path is marked red in the map and the direction changes purple. With this addition, the grid image looks as follows:\n",
+    "\n",
+    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_path.png)\n",
     "\n",
     "##### Integration with Vision System\n",
     "Based on the information received from the vision system, the path is calculated and obstacles can be avoided. Additionally, kidnapping of the thymio and the goal can be handled. Whenever such a kidnapping occurs, the path is recomputed so that the goal can be reached.\n",
