added results, and implementation structure

--- a/report.ipynb
+++ b/report.ipynb
@@ -90,6 +90,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Libraries required: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.2 Vision\n"
    ]
   },
