added setup environment

--- a/report.ipynb
+++ b/report.ipynb
@@ -16,26 +16,28 @@
    "source": [
     "## Table of contents\n",
     "1. [Introduction](#1-introduction)\n",
-    "2. [Implementation](#2-implementation)\n",
+    "2. [Setup](#2-setup)\n",
     "      - 2.1 [Vision](#3-global-navigation)\n",
+    "3. [Implementation](#2-implementation)\n",
+    "      - 3.1 [Vision](#3-global-navigation)\n",
     "         -  [Implementation Details](#31-implementation-details)\n",
     "         -  [Functions](#32-functions)\n",
-    "      - 2.2 [Global Navigation](#4-vision)\n",
+    "      - 3.2 [Global Navigation](#4-vision)\n",
     "         -  [Implementation Details](#41-implementation-details)\n",
     "         -  [Functions](#42-functions)\n",
-    "      - 2.3 [Motion Control](#5-motion-control)\n",
+    "      - 3.3 [Motion Control](#5-motion-control)\n",
     "         -  [Implementation Details](#51-implementation-details)\n",
     "         -  [Functions](#52-functions)\n",
-    "      - 2.4 [Local Navigation](#6-local-navigation)\n",
+    "      - 3.4 [Local Navigation](#6-local-navigation)\n",
     "         -  [Implementation Details](#61-implementation-details)\n",
     "         -  [Functions](#62-functions)\n",
-    "      - 2.5 [Kalman Filter](#7-kalman-filter)\n",
+    "      - 3.5 [Kalman Filter](#7-kalman-filter)\n",
     "         - [Implementation Details](#71-implementation-details)\n",
     "         - [Functions](#72-functions)\n",
-    "3. [Results](#4-results)\n",
-    "   - 3.1 [Summary](#41-summary)\n",
-    "   - 3.2 [Videos](#42-video)\n",
-    "4. [Conclusion](#4-conclusion)\n",
+    "4. [Results](#4-results)\n",
+    "   - 4.1 [Summary](#41-summary)\n",
+    "   - 4.2 [Videos](#42-video)\n",
+    "5. [Conclusion](#4-conclusion)\n",
     "   - 4.1 [Summary](#41-summary)\n",
     "   - 4.2 [References](#42-references)\n",
     "\n",
@@ -63,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop such a solution to enable Thymio robots to traverse a terrain containing obstacles to reach a goal.\n",
+    "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop a solution that enables the Thymio robot to traverse a terrain containing obstacles and reach a goal.\n",
     "\n",
     "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed.\n",
     "\n",
@@ -82,37 +84,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Implementation\n",
-    "   "
+    "## 2. Setup \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Libraries required: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Libraries required: \n",
     "- NumPy\n",
     "- tmdclient\n",
     "- OpenCV\n",
-    "- FilterPy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- FilterPy\n",
+    "\n",
     "### Method overview: \n",
     "\n",
     "Thymio initially reads a global map from processed images acquired through the webcam. It subsequently extracts a path through global navigation and adheres to this route unless faced with kidnapping or local navigation triggers.\n",
     "\n",
-    "The provided schema illustrates the code structure implemented for this purpose. In cases where the camera becomes obscured, the robot continues to follow the pre-defined global path planning until the camera sensing functionality is restored.\n",
-    "\n"
+    "The provided schema illustrates the code structure implemented for this purpose. In cases where the camera becomes obscured, the robot continues to follow the pre-defined global path planning until the camera sensing functionality is restored."
    ]
   },
   {
@@ -131,7 +120,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Vision\n"
+    "####  Environment\n",
+    "\n",
+    "\n",
+    "Webcam  : AUKEY 1080P\n",
+    "\n",
+    "Map :\n",
+    "- White background \n",
+    "- Global obstacles: black \n",
+    "- Local obstacles: small objects\n",
+    "- Markers: Aruco Markers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\">\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Vision\n"
    ]
   },
   {
@@ -183,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Global Navigation\n",
+    "### 3.2 Global Navigation\n",
     "\n"
    ]
   },
@@ -212,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Motion Control"
+    "### 3.3 Motion Control"
    ]
   },
   {
@@ -226,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Local Navigation"
+    "### 3.4 Local Navigation"
    ]
   },
   {
@@ -248,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 Kalman Filter"
+    "### 3.5 Kalman Filter"
    ]
   },
   {
@@ -333,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results\n"
+    "### 4. Results\n"
    ]
   },
   {
@@ -351,9 +372,12 @@
     "\n",
     "Concerning navigation, the path derived through the Dijkstra algorithm demonstrated sufficient optimization, allowing the robot to traverse from the starting point to the goal position efficiently. The motion control mechanisms effectively ensured that the Thymio adhered to the designated path.\n",
     "\n",
-    "In terms of filtering, we were able to obscure the camera and still follow the path with good precision, so the implementation was successfull. \n",
     "\n",
-    "Looking ahead to future projects, there is room for enhancing the smoothness of Thymio's movements by implementing more refined path planning methods.\n",
+    "(The biggest problem that we encountered was ..\n",
+    "\n",
+    "\n",
+    "(In terms of filtering, we were able to obscure the camera and still follow the path with good precision, so the implementation was successfull. )\n",
+    "\n",
     "\n",
     "\n",
     "\n"
