--- a/report.ipynb
+++ b/report.ipynb
@@ -392,11 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-03T18:38:26.447341600Z",
-     "start_time": "2023-12-03T18:37:57.485629300Z"
+     "end_time": "2023-12-03T18:48:25.726354200Z",
+     "start_time": "2023-12-03T18:47:52.968791200Z"
     }
    },
    "outputs": [
@@ -405,348 +405,7 @@
      "output_type": "stream",
      "text": [
       "initializing\n",
-      "WebcamFeed initialized.\n",
-      "corners shape (6, 1, 4, 2)\n",
-      "corners_for_thymio (4, 2)\n",
-      "last_location [116  54]\n",
-      "corners shape (6, 1, 4, 2)\n",
-      "corners_for_thymio (4, 2)\n",
-      "last_location (116, 54)\n",
-      "last_location (133, 97)\n",
-      "[(116, 55), (116, 56), (116, 57), (116, 58), (116, 59), (116, 60), (116, 61), (116, 62), (116, 63), (116, 64), (116, 65), (116, 66), (116, 67), (116, 68), (116, 69), (116, 70), (116, 71), (116, 72), (116, 73), (116, 74), (116, 75), (116, 76), (116, 77), (116, 78), (116, 79), (116, 80), (116, 81), (117, 82), (118, 83), (119, 84), (120, 84), (121, 85), (122, 86), (123, 87), (124, 88), (125, 89), (126, 90), (127, 91), (128, 92), (129, 93), (130, 94), (131, 95), (132, 96), (133, 97)]\n",
-      "last_location (116, 54)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  54]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 27)\n",
-      "Global Nav\n",
-      "last_location (116, 54)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  54]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 27)\n",
-      "Global Nav\n",
-      "last_location (116, 54)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  54]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 27)\n",
-      "Global Nav\n",
-      "last_location (116, 54)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  55]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 26)\n",
-      "Global Nav\n",
-      "last_location (116, 55)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  56]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 25)\n",
-      "Global Nav\n",
-      "last_location (116, 56)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  57]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 24)\n",
-      "Global Nav\n",
-      "last_location (116, 57)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  59]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 22)\n",
-      "Global Nav\n",
-      "last_location (116, 59)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  60]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 21)\n",
-      "Global Nav\n",
-      "last_location (116, 60)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  61]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 20)\n",
-      "Global Nav\n",
-      "last_location (116, 61)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  63]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 18)\n",
-      "Global Nav\n",
-      "last_location (116, 63)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  64]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 17)\n",
-      "Global Nav\n",
-      "last_location (116, 64)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  65]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 16)\n",
-      "Global Nav\n",
-      "last_location (116, 65)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  66]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 15)\n",
-      "Global Nav\n",
-      "last_location (116, 66)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [115  67]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (1, 14)\n",
-      "Global Nav\n",
-      "last_location (115, 67)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [115  68]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (1, 13)\n",
-      "Global Nav\n",
-      "last_location (115, 68)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [115  69]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (1, 12)\n",
-      "Global Nav\n",
-      "last_location (115, 69)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  70]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 11)\n",
-      "Global Nav\n",
-      "last_location (116, 70)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  71]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 10)\n",
-      "Global Nav\n",
-      "last_location (116, 71)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  72]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 9)\n",
-      "Global Nav\n",
-      "last_location (116, 72)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  73]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 8)\n",
-      "Global Nav\n",
-      "last_location (116, 73)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  74]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 7)\n",
-      "Global Nav\n",
-      "last_location (116, 74)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  75]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 6)\n",
-      "Global Nav\n",
-      "last_location (116, 75)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  76]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 5)\n",
-      "Global Nav\n",
-      "last_location (116, 76)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  77]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 4)\n",
-      "Global Nav\n",
-      "last_location (116, 77)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  78]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (0, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 78)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  79]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (3, 5)\n",
-      "Global Nav\n",
-      "last_location (116, 79)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  80]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (3, 4)\n",
-      "Global Nav\n",
-      "last_location (116, 80)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  80]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (3, 4)\n",
-      "Global Nav\n",
-      "last_location (116, 80)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  80]\n",
-      "thymio_direction (0, 9)\n",
-      "wanted_direction (3, 4)\n",
-      "Global Nav\n",
-      "last_location (116, 80)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (1, 9)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (2, 9)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (2, 9)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (3, 9)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (4, 8)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (5, 8)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  81]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (116, 81)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [116  82]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (3, 2)\n",
-      "Global Nav\n",
-      "last_location (116, 82)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [117  82]\n",
-      "thymio_direction (7, 6)\n",
-      "wanted_direction (3, 2)\n",
-      "Global Nav\n",
-      "last_location (117, 82)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [117  82]\n",
-      "thymio_direction (7, 6)\n",
-      "wanted_direction (3, 2)\n",
-      "Global Nav\n",
-      "last_location (117, 82)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [118  83]\n",
-      "thymio_direction (8, 5)\n",
-      "wanted_direction (15, 14)\n",
-      "Global Nav\n",
-      "last_location (118, 83)\n",
-      "thymio_location [118  83]\n",
-      "thymio_direction (8, 5)\n",
-      "wanted_direction (15, 14)\n",
-      "Global Nav\n",
-      "last_location (118, 83)\n",
-      "last_location (133, 97)\n",
-      "thymio_location [119  84]\n",
-      "thymio_direction (8, 5)\n",
-      "wanted_direction (14, 13)\n",
-      "Global Nav\n",
-      "last_location (119, 84)\n",
-      "last_location (136, 99)\n",
-      "thymio_location [120  84]\n",
-      "thymio_direction (8, 4)\n",
-      "wanted_direction (13, 13)\n",
-      "Global Nav\n",
-      "last_location (120, 84)\n",
-      "last_location (136, 99)\n",
-      "thymio_location [121  85]\n",
-      "thymio_direction (8, 4)\n",
-      "wanted_direction (12, 12)\n",
-      "Global Nav\n",
-      "last_location (121, 85)\n",
-      "last_location (136, 99)\n",
-      "thymio_location [122  85]\n",
-      "thymio_direction (8, 5)\n",
-      "wanted_direction (11, 12)\n",
-      "Global Nav\n",
-      "last_location (122, 85)\n",
-      "last_location (136, 99)\n",
-      "thymio_location [123  86]\n",
-      "thymio_direction (7, 6)\n",
-      "wanted_direction (10, 11)\n",
-      "Global Nav\n",
-      "last_location (123, 86)\n",
-      "last_location (139, 101)\n",
-      "thymio_location [123  86]\n",
-      "thymio_direction (7, 6)\n",
-      "wanted_direction (10, 11)\n",
-      "Global Nav\n",
-      "last_location (123, 86)\n",
-      "thymio_location [124  87]\n",
-      "thymio_direction (7, 6)\n",
-      "wanted_direction (9, 10)\n",
-      "Global Nav\n",
-      "last_location (124, 87)\n",
-      "thymio_location [125  87]\n",
-      "thymio_direction (7, 7)\n",
-      "wanted_direction (8, 10)\n",
-      "Global Nav\n",
-      "last_location (125, 87)\n",
-      "thymio_location [125  88]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (8, 9)\n",
-      "Global Nav\n",
-      "last_location (125, 88)\n",
-      "thymio_location [126  89]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (7, 8)\n",
-      "Global Nav\n",
-      "last_location (126, 89)\n",
-      "thymio_location [127  90]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (6, 7)\n",
-      "Global Nav\n",
-      "last_location (127, 90)\n",
-      "thymio_location [127  90]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (6, 7)\n",
-      "Global Nav\n",
-      "last_location (127, 90)\n",
-      "thymio_location [128  91]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (5, 6)\n",
-      "Global Nav\n",
-      "last_location (128, 91)\n",
-      "thymio_location [129  92]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (4, 5)\n",
-      "Global Nav\n",
-      "last_location (129, 92)\n",
-      "thymio_location [129  93]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (4, 4)\n",
-      "Global Nav\n",
-      "last_location (129, 93)\n",
-      "thymio_location [130  94]\n",
-      "thymio_direction (6, 7)\n",
-      "wanted_direction (3, 3)\n",
-      "Global Nav\n",
-      "last_location (130, 94)\n",
-      "Global Nav\n",
-      "Error: list index out of range\n"
+      "WebcamFeed initialized.\n"
      ]
     }
    ],
